@@ -3,6 +3,7 @@ Version 0.1.10
 
 - watcom: new targets (OS/2) support
 - autoconf: support IBM xlC compiler on Mac OS X
+- autoconf: dependencies support for SGI mipsPro compiler (Vadim Zeitlin)
 
 
 Version 0.1.9.1
